feat(multinet): adding multinet capability
